fix minor layout bug in share state

--- a/assets/css/section_share.css
+++ b/assets/css/section_share.css
@@ -212,7 +212,7 @@ input.share_key_emoji-item:value{
 }
 
 .share_key_sentence{
-  margin: 2rem 2rem 4rem 2rem;
+  margin: 1.5rem 2rem 4rem 2rem;
 }
 
 .share_text{
